<resources>
    <string name="app_name">Моя команда</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Новый пользователь</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+79182439379</string>
    <string name="settings_label_phone_number">Ваш номер телефона</string>
    <string name="settings_default_login">by_venchik</string>
    <string name="settings_label_login">Нажмите, чтобы изменить имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на Ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="register_phont_hint">------------</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="sttings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">Имя пользователя</string>
    <string name="settings_input_bio">О себе</string>
    <string name="clear_history_chat">Очистить историю</string>
    <string name="delete_chat">Удалить чат</string>
    <string name="voice_message">Голосовое сообщение</string>

    <plurals name="count_members">
        <item quantity="one">%d участник</item>
        <item quantity="few">%d участника</item>
        <item quantity="many">%d участников</item>
        <item quantity="other">%d участников</item>

    </plurals>
</resources>